fix some alignment issues
on mobile the divs use `left` but on desktop they use `right`, so on desktop we also need
to clear left by setting it to `left: initial`

--- a/src/styles/styles_multiple_choice.css
+++ b/src/styles/styles_multiple_choice.css
@@ -14,8 +14,8 @@ html {
 	margin: 0px;
 }
 
-#grid-container { 
-	
+#grid-container {
+
 
   background-color:#ffffff;
 
@@ -461,6 +461,7 @@ html {
 	      line-height: 75px;
 	      margin-left:30px;
 	      padding: 0px;
+        left: initial;
 	    }
 
 	    .gameMessage {
@@ -491,6 +492,7 @@ html {
 	      font-family: 'DIN Condensed';
 	      line-height:25px;
 	      padding-bottom:10px;
+        left: initial;
 	  	}
 
 	  	.gadgetRecommendation {
